After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 683992 - stack: Fix gjs_dumpstack
stack: Fix gjs_dumpstack
Status: RESOLVED FIXED
Product: gjs
Classification: Bindings
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gjs-maint
gjs-maint
Depends on:
Blocks:
 
 
Reported: 2012-09-13 22:49 UTC by Jasper St. Pierre (not reading bugmail)
Modified: 2012-09-19 06:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
stack: Fix gjs_dumpstack (964 bytes, patch)
2012-09-13 22:49 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review

Description Jasper St. Pierre (not reading bugmail) 2012-09-13 22:49:11 UTC
See patch. I noticed this was broken for a while, but didn't bother
to dig in as to why.
Comment 1 Jasper St. Pierre (not reading bugmail) 2012-09-13 22:49:13 UTC
Created attachment 224286 [details] [review]
stack: Fix gjs_dumpstack

We need to iterate the stack here at least once or the while
loop will terminate early.
Comment 2 Giovanni Campagna 2012-09-13 22:51:15 UTC
Review of attachment 224286 [details] [review]:

Ok
Comment 3 Jasper St. Pierre (not reading bugmail) 2012-09-19 06:45:51 UTC
Attachment 224286 [details] pushed as 5c90e77 - stack: Fix gjs_dumpstack