stack: Fix gjs_dumpstack

We need to iterate the stack here at least once or the while
loop will terminate early.

https://bugzilla.gnome.org/show_bug.cgi?id=683992